--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@custom-repo/aws-lambda",
+  "name": "@motforex-points/aws-lambda",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -22,8 +22,8 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@custom-repo/schemas": "workspace:*",
-    "@custom-repo/ts-configs": "workspace:*",
+    "@motforex-points/schemas": "workspace:*",
+    "@motforex-points/ts-configs": "workspace:*",
     "@types/node": "^24.10.1"
   }
 }
