--- a/packages/ssm/package.json
+++ b/packages/ssm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@custom-repo/aws-ssm",
+  "name": "@motforex-points/aws-ssm",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -18,8 +18,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.24.0",
   "devDependencies": {
-    "@custom-repo/schemas": "workspace:*",
-    "@custom-repo/ts-configs": "workspace:*",
+    "@motforex-points/schemas": "workspace:*",
+    "@motforex-points/ts-configs": "workspace:*",
     "@types/node": "^24.10.1"
   },
   "dependencies": {
