--- a/packages/ts-configs/package.json
+++ b/packages/ts-configs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@custom-repo/ts-configs",
+  "name": "@motforex-points/ts-configs",
   "version": "1.0.0",
   "private": true,
   "description": "A global TypeScript configuration package for the monorepo",
