--- a/stacks/example/package.json
+++ b/stacks/example/package.json
@@ -22,14 +22,14 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.971.0",
     "@aws-sdk/lib-dynamodb": "^3.971.0",
-    "@custom-repo/libs": "workspace:*",
+    "@motforex-points/libs": "workspace:*",
     "aws-lambda": "^1.0.7",
     "dotenv": "^17.2.3",
     "dynamo-command-builder": "^0.1.7",
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@custom-repo/ts-configs": "workspace:*",
+    "@motforex-points/ts-configs": "workspace:*",
     "@eslint/js": "^9.39.2",
     "@serverless/typescript": "^4.30.0",
     "@types/aws-lambda": "^8.10.159",
